# stellar-kraal-backend

./: .env.e2e.example  .env.example  .env.test  .gitignore  Cargo.toml  README.md  docker-compose.chaos.yml  docker-compose.yml  jest.chaos.config.ts  jest.config.ts  package-lock.json  package.json
.github/workflows/: contracts-ci.yml  load-test.yml  monitoring-ci.yml  mutation-testing.yml  oracle-bridge-dr-drill-reminder.yml  oracle-bridge-dr.yml  rbac-lint.yml  secrets-manager-demo.yml  unit-tests.yml
contracts/: README.md  mutants.toml
contracts/carbon_credit/: Cargo.toml  README.md
contracts/carbon_credit/src/: lib.rs  tests.rs
contracts/carbon_credit/tests/: rbac_tests.rs  sep41_conformance.rs
contracts/carbon_registry/: Cargo.toml
contracts/carbon_registry/src/: migration.rs
contracts/carbon_registry/tests/: rbac_tests.rs
contracts/ci/: README.md  compare_gate.py  extract_abi.py
docs/adr/: ADR-007-oracle-aggregation-provenance.md  ADR-008-event-schema-versioning.md  ADR-009-cross-contract-auth.md  README.md  template.md
docs/compliance/: methodology-mapping.md  sep41-audit.md
docs/issues/: 01-smart-contract-security.md  02-smart-contract-security-cont.md  03-oracle-data-integrity.md  04-backend-api.md  05-frontend-wallet-ux.md  06-testing-qa.md  07-devops-docs-compliance.md
docs/ops/: anomaly-detection.md  oracle-bridge-dr.md  secrets-rotation.md
monitoring/: Dockerfile  tsconfig.json
oracle-bridge/: .env.example  Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
prisma/: schema.prisma
scripts/: rotate-jwt-secret.ts
src/: app.ts
tests/: README.md
(+123 files in other folders)
