[workspace]
resolver = "2"
members = [
    "contracts/carbon_credit",
    "contracts/carbon_registry",
]

# After regenerating the lockfile, pin ed25519-dalek away from 3.x if needed:
#   cargo update -p ed25519-dalek@3.0.0 --precise 2.2.0
# soroban-env-host 22 accepts ed25519-dalek >=2, but 3.x breaks ChaCha20Rng in tests.

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
