[package]
name = "carbon_registry"
version = "0.1.0"
edition = "2021"
description = "Carbon project registry for StellarKraal"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
